--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
   <link href="https://fonts.googleapis.com/css?family=Denk+One" rel="stylesheet">
 </head>
 <body>
-  <div>
+  <div class="container">
     <img class="img-flex" src="images/dimetrodon.svg" alt="">
-  </div>
-  <div>
     <section>
       <h2>Dimetrodon</h2>
       <p>Often mistaken for a dinosaur but went extinct 40 M years before dinosaurs.</p>
